--- a/34. DataBase Controller/DataBaseController/newconnectiondiaglog.ui
+++ b/34. DataBase Controller/DataBaseController/newconnectiondiaglog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>562</width>
-    <height>594</height>
+    <width>516</width>
+    <height>500</height>
    </rect>
   </property>
   <property name="palette">
@@ -485,10 +485,10 @@
   <widget class="QWidget" name="verticalLayoutWidget_4">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>170</y>
-     <width>521</width>
-     <height>51</height>
+     <x>10</x>
+     <y>130</y>
+     <width>491</width>
+     <height>41</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -496,7 +496,7 @@
      <widget class="QLabel" name="label_4">
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <pointsize>11</pointsize>
         <bold>true</bold>
        </font>
       </property>
@@ -510,8 +510,8 @@
   <widget class="QSpinBox" name="spinBox">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>130</y>
+     <x>310</x>
+     <y>90</y>
      <width>191</width>
      <height>41</height>
     </rect>
@@ -538,10 +538,10 @@ background-color: white;</string>
   <widget class="QWidget" name="verticalLayoutWidget_6">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>280</y>
-     <width>521</width>
-     <height>41</height>
+     <x>10</x>
+     <y>230</y>
+     <width>491</width>
+     <height>21</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -549,7 +549,7 @@ background-color: white;</string>
      <widget class="QLabel" name="label_6">
       <property name="font">
        <font>
-        <pointsize>16</pointsize>
+        <pointsize>13</pointsize>
         <bold>true</bold>
        </font>
       </property>
@@ -566,8 +566,8 @@ background-color: white;</string>
   <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>245</x>
-     <y>510</y>
+     <x>210</x>
+     <y>420</y>
      <width>291</width>
      <height>80</height>
     </rect>
@@ -700,9 +700,9 @@ background-color: white;</string>
   <widget class="QWidget" name="verticalLayoutWidget_7">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>400</y>
-     <width>521</width>
+     <x>10</x>
+     <y>330</y>
+     <width>491</width>
      <height>51</height>
     </rect>
    </property>
@@ -711,7 +711,7 @@ background-color: white;</string>
      <widget class="QLabel" name="label_7">
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <pointsize>11</pointsize>
         <bold>true</bold>
        </font>
       </property>
@@ -725,9 +725,9 @@ background-color: white;</string>
   <widget class="QLineEdit" name="lineEdit_3">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>360</y>
-     <width>521</width>
+     <x>10</x>
+     <y>290</y>
+     <width>491</width>
      <height>41</height>
     </rect>
    </property>
@@ -736,14 +736,20 @@ background-color: white;</string>
 border: 2px solid grey;
 color: black;
 background-color: white;</string>
+   </property>
+   <property name="placeholderText">
+    <string>Ex: postgres</string>
+   </property>
+   <property name="clearButtonEnabled">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_4">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>450</y>
-     <width>521</width>
+     <x>10</x>
+     <y>380</y>
+     <width>491</width>
      <height>41</height>
     </rect>
    </property>
@@ -753,14 +759,20 @@ border: 2px solid grey;
 color: black;
 background-color: white;</string>
    </property>
+   <property name="placeholderText">
+    <string>Ex: MySuper123SecretPass#word</string>
+   </property>
+   <property name="clearButtonEnabled">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QWidget" name="verticalLayoutWidget_2">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>80</y>
+     <x>10</x>
+     <y>50</y>
      <width>291</width>
-     <height>51</height>
+     <height>41</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -768,7 +780,7 @@ background-color: white;</string>
      <widget class="QLabel" name="label_2">
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <pointsize>11</pointsize>
         <bold>true</bold>
        </font>
       </property>
@@ -782,10 +794,10 @@ background-color: white;</string>
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>30</y>
-     <width>521</width>
-     <height>51</height>
+     <x>10</x>
+     <y>10</y>
+     <width>491</width>
+     <height>41</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -793,7 +805,7 @@ background-color: white;</string>
      <widget class="QLabel" name="label">
       <property name="font">
        <font>
-        <pointsize>20</pointsize>
+        <pointsize>17</pointsize>
         <bold>true</bold>
        </font>
       </property>
@@ -807,9 +819,9 @@ background-color: white;</string>
   <widget class="QLineEdit" name="lineEdit_2">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>220</y>
-     <width>521</width>
+     <x>10</x>
+     <y>170</y>
+     <width>491</width>
      <height>41</height>
     </rect>
    </property>
@@ -819,14 +831,20 @@ border: 2px solid grey;
 color: black;
 background-color: white;</string>
    </property>
+   <property name="placeholderText">
+    <string>Ex: Salary</string>
+   </property>
+   <property name="clearButtonEnabled">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QWidget" name="verticalLayoutWidget_3">
    <property name="geometry">
     <rect>
-     <x>349</x>
-     <y>80</y>
+     <x>310</x>
+     <y>50</y>
      <width>191</width>
-     <height>51</height>
+     <height>41</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -834,7 +852,7 @@ background-color: white;</string>
      <widget class="QLabel" name="label_3">
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <pointsize>11</pointsize>
         <bold>true</bold>
        </font>
       </property>
@@ -848,9 +866,9 @@ background-color: white;</string>
   <widget class="QWidget" name="verticalLayoutWidget_5">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>320</y>
-     <width>521</width>
+     <x>10</x>
+     <y>250</y>
+     <width>491</width>
      <height>41</height>
     </rect>
    </property>
@@ -859,7 +877,7 @@ background-color: white;</string>
      <widget class="QLabel" name="label_5">
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <pointsize>11</pointsize>
         <bold>true</bold>
        </font>
       </property>
@@ -873,8 +891,8 @@ background-color: white;</string>
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>130</y>
+     <x>10</x>
+     <y>90</y>
      <width>291</width>
      <height>41</height>
     </rect>
@@ -884,6 +902,12 @@ background-color: white;</string>
 border: 2px solid grey;
 color: black;
 background-color: white;</string>
+   </property>
+   <property name="placeholderText">
+    <string>Ex: 10.10.1.3</string>
+   </property>
+   <property name="clearButtonEnabled">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
